Fix tall aspect-ratio images getting squashed
When the `max-height` kicks in, the `width` attribute needs to be overridden, just like `max-width` needs `height: auto`.

--- a/app/assets/stylesheets/base/typography.scss
+++ b/app/assets/stylesheets/base/typography.scss
@@ -269,6 +269,7 @@ body {
   video,
   .ff-container {
     height: auto;
+    width: auto;
     display: block;
     margin: var(--content-rhythm) auto;
     max-width: 100%;
